--- a/index.html
+++ b/index.html
@@ -7,51 +7,15 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/history.css">
     <link rel="stylesheet" href="styles/add-history-report.css">
+    <script src="elm.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <section id="history">
-        <div class="title">
-            <h1>Car History</h1>
-        </div>
-
-        <table>
-            <tr>
-                <th>Date</th>
-                <th>Repairs</th>
-                <th>Mileage</th>
-            </tr>
-            <tr>
-                <td>24.02.2017</td>
-                <td>Clutch replacement</td>
-                <td>184 789</td>
-            </tr>
-            <tr>
-                <td>18.05.2017</td>
-                <td>Oil service</td>
-                <td>197000</td>
-            </tr>
-            <tr>
-                <td>30.09.2017</td>
-                <td>Gas filter replacement with airconditioning check</td>
-                <td>210 457</td>
-            </tr>
-        </table>
-    </section>
-
-    <section id="add-history-report">
-        <form>
-            <div>
-                <label for="mileage">mileage</label>
-                <input name="mileage" id="mileage" type="number">
-            </div>
-            <div>
-                <label for="repair">repair</label>
-                <textarea name="repair" id="repair" cols="30" rows="10"></textarea>
-            </div>
-            <input type="submit" name="add" id="add" value="add">
-            <input type="submit" name="cancel" id="cancel" value="cancel">
-        </form>
-    </section>
+    <div id="elm"></div>
+    <script>
+    var app = Elm.Main.init({
+        node: document.getElementById('elm')
+    });
+    </script>
 </body>
 </html>
